--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <button onclick="updatePlayerNames()">Update Names</button>
 
         <div>
-            <img src="https://via.placeholder.com/300x200.png" alt="Picture" />
+            <img src="./adam.png" alt="Picture" />
         </div>
 
         <div id="game-board"></div>
