--- a/index.html
+++ b/index.html
@@ -11,11 +11,19 @@
             background-color: lightblue;
             margin: 0;
             padding: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            overflow: hidden;
         }
         .container {
             max-width: 900px;
             margin: 20px auto;
             padding: 20px;
+            width: 100%;
+            box-sizing: border-box;
         }
         #game-board {
             display: grid;
@@ -43,66 +51,17 @@
         #game-message {
             font-size: 20px;
             font-weight: bold;
-        }
-        #game-message .celebration {
-            font-size: 30px;
-            color: gold;
-            animation: confetti 1s ease-in-out infinite;
-        }
-        @keyframes confetti {
-            0% { transform: scale(1); }
-            50% { transform: scale(1.2); color: red; }
-            100% { transform: scale(1); color: gold; }
+            margin-bottom: 10px;
         }
         #rule-message {
-            margin-top: 20px;
+            margin-top: 10px;
             font-size: 16px;
             font-weight: bold;
             color: green;
         }
-        img {
-            width: 5cm;
-            height: 5cm;
-            margin: 20px auto;
+        #celebration-message {
+            font-size: 30px;
+            color: gold;
+            display: none;
         }
-        .btn {
-            padding: 10px 20px;
-            margin: 10px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            cursor: pointer;
-            font-size: 16px;
-        }
-        .btn:hover {
-            background-color: #45a049;
-        }
-
-        /* Responsive Design */
-        @media (max-width: 600px) {
-            #game-board {
-                grid-template-columns: repeat(5, 50px);
-                grid-template-rows: repeat(5, 50px);
-                max-width: 400px;
-            }
-            .cell {
-                width: 50px;
-                height: 50px;
-            }
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>Tic Tac Toe</h1>
-        <p id="game-message">Next Move: <span id="next-player">Adam Joseph Justin</span></p>
-        <p id="rule-message">Rule: 5 consecutive rows of 'X' or 'O' to win</p>
-
-        <div>
-            <label for="player2-input">Enter Player 2 Name:</label>
-            <input type="text" id="player2-input" placeholder="Enter Player 2 Name" />
-            <button class="btn" onclick="updatePlayerNames()">Update Player 2 Name</button>
-        </div>
-
-        <div>
-       
+      
