--- a/index.html
+++ b/index.html
@@ -8,16 +8,10 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            background-color: lightblue;
-            margin: 0;
-            padding: 0;
         }
         .container {
             max-width: 900px;
-            margin: 20px auto;
-            padding: 20px;
-            width: 100%;
-            box-sizing: border-box;
+            margin: 0 auto;
         }
         #game-board {
             display: grid;
@@ -36,61 +30,48 @@
             border: 1px solid #000;
             font-size: 24px;
             cursor: pointer;
-            transition: background-color 0.2s;
         }
         .cell.taken {
             pointer-events: none;
-            background-color: #e0e0e0;
+        }
+        #player-name {
+            margin-bottom: 20px;
         }
         #game-message {
             font-size: 20px;
             font-weight: bold;
-            margin-bottom: 10px;
         }
-        #rule-message {
-            margin-top: 10px;
-            font-size: 16px;
+        .celebration {
+            font-size: 30px;
+            color: gold;
+            animation: confetti 1s ease-in-out infinite;
+        }
+        /* Simple confetti animation */
+        @keyframes confetti {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.2); color: red; }
+            100% { transform: scale(1); color: gold; }
+        }
+        #player1-name, #player2-name {
             font-weight: bold;
+        }
+        #player1-name {
+            color: blue;
+        }
+        #player2-name {
             color: green;
         }
         #celebration-message {
-            font-size: 30px;
-            color: gold;
             display: none;
+            margin-top: 20px;
+        }
+        #celebration-message.show {
+            display: block;
         }
         img {
             width: 5cm;
             height: 5cm;
             margin: 20px auto;
-        }
-        .btn {
-            padding: 10px 20px;
-            margin: 10px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            cursor: pointer;
-            font-size: 16px;
-        }
-        .btn:hover {
-            background-color: #45a049;
-        }
-
-        /* Responsive Design */
-        @media (max-width: 600px) {
-            #game-board {
-                grid-template-columns: repeat(5, 50px);
-                grid-template-rows: repeat(5, 50px);
-                max-width: 400px;
-            }
-            .cell {
-                width: 50px;
-                height: 50px;
-            }
-            img {
-                width: 4cm;
-                height: 4cm;
-            }
         }
     </style>
 </head>
@@ -98,12 +79,11 @@
     <div class="container">
         <h1>Tic Tac Toe</h1>
         <p id="game-message">Next Move: <span id="next-player">Adam Joseph Justin</span></p>
-        <p id="rule-message">Rule: 5 consecutive rows of 'X' or 'O' to win</p>
 
         <div>
             <label for="player2-input">Enter Player 2 Name:</label>
             <input type="text" id="player2-input" placeholder="Enter Player 2 Name" />
-            <button class="btn" onclick="updatePlayerNames()">Update Player 2 Name</button>
+            <button onclick="updatePlayerNames()">Update Player 2 Name</button>
         </div>
 
         <div>
@@ -112,8 +92,8 @@
 
         <div id="game-board"></div>
 
-        <p id="celebration-message" class="celebration">🎉🎈 Congrats! You Win! 🎈🎉</p>
-        <button class="btn" onclick="restartGame()">Restart Game</button>
+        <p id="celebration-message" class="celebration"></p>
+        <button onclick="restartGame()">Restart Game</button>
     </div>
 
     <script>
@@ -130,7 +110,6 @@
             gameOver = false;
             document.getElementById('game-message').innerText = `Next Move: ${playerName1}`;
             document.getElementById('celebration-message').classList.remove('show');
-            document.getElementById('celebration-message').innerHTML = '';
             const gameBoardElement = document.getElementById('game-board');
             gameBoardElement.innerHTML = '';
             for (let i = 0; i < boardSize; i++) {
@@ -161,10 +140,7 @@
             if (checkWin()) {
                 gameOver = true;
                 document.getElementById('game-message').innerText = `${currentPlayer === 'X' ? playerName1 : playerName2} wins!`;
-                document.getElementById('celebration-message').innerHTML = '🎉🎈 Congrats! You Win! 🎈🎉';
-                document.getElementById('celebration-message').style.display = 'block';
-                playClappingSound();
-                showBalloonAnimation();
+                document.getElementById('celebration-message').classList.add('show');
             } else {
                 currentPlayer = currentPlayer === 'X' ? 'O' : 'X';
                 document.getElementById('game-message').innerText = `Next Move: ${currentPlayer === 'X' ? playerName1 : playerName2}`;
@@ -215,32 +191,6 @@
                 playerName2 = newName2;
             }
             document.getElementById('game-message').innerText = `Next Move: ${playerName1}`;
-        }
-
-        // Play clapping sound
-        function playClappingSound() {
-            const audio = new Audio('https://www.soundjay.com/button/beep-07.wav'); // Example clapping sound URL
-            audio.play();
-        }
-
-        // Show balloons animation
-        function showBalloonAnimation() {
-            const balloonImage = document.createElement('img');
-            balloonImage.src = 'https://www.clipartmax.com/png/full/150-1500143_balloon-clipart.png'; // Example balloon image
-            balloonImage.style.position = 'absolute';
-            balloonImage.style.top = '50%';
-            balloonImage.style.left = '50%';
-            balloonImage.style.transform = 'translate(-50%, -50%) scale(0)';
-            document.body.appendChild(balloonImage);
-
-            setTimeout(() => {
-                balloonImage.style.transition = 'transform 2s ease-in-out';
-                balloonImage.style.transform = 'translate(-50%, -50%) scale(1)';
-            }, 100);
-
-            setTimeout(() => {
-                document.body.removeChild(balloonImage);
-            }, 3000);
         }
 
         // Restart the game
